Fix for fdo#36481: Spinboxes missing up/down arrows on Windows

Bypass test for empty control region (rectangle) on Windows. Obviously
just a stopgap measure. More insightful fix welcome.